...
fun PlusIcon(
    onIconClicked: () -> Unit,
    isEnabled: Boolean = true
) {
    ControlIcon(
        imageVector = Icons.Filled.Add,
        contentDescription = "plus",
        onIconClicked = onIconClicked,
        isEnabled = isEnabled
    )
}

@Composable
fun MinusIcon(
    onIconClicked: () -> Unit,
    isEnabled: Boolean = true
) {
    ControlIcon(
        imageVector = Icons.Filled.Remove,
        contentDescription = "minus",
        onIconClicked = onIconClicked,
        isEnabled = isEnabled
    )
}

@Composable
...
