...
    Row(
        modifier = modifier
            .fillMaxHeight()
            .conditionalBackground(condition = isSelected, color = MaterialTheme.colorScheme.secondaryContainer)
            .clickable { onOptionSelected() }
            .padding(horizontal = 24.dp)
            .semantics { contentDescription = "mechanics_option" },
        horizontalArrangement = Arrangement.Center,
        verticalAlignment = Alignment.CenterVertically
    ) {
        DieImage(die = die, mechanic = mechanic)
        if (mechanic != RollSetting.Mechanic.NORMAL) {
            DieImage(die = die, mechanic = mechanic)
...
