<resources>
    <string name="app_name">Dice Pouch</string>

    <!-- TabRow -->
    <string name="tab_table">Table</string>
    <string name="tab_pouch">Pouch</string>
    <string name="tab_settings">Settings</string>

    <!-- TableScreen -->
    <string name="dice_caption">Dice</string>
    <string name="shortcuts_caption">Shortcuts</string>
    <string name="no_set_chosen">No dice set chosen</string>
    <string name="no_dice_added">No dice added</string>
    <string name="no_shortcuts_added">No shortcuts added</string>

    <!-- PouchScreen -->
    <string name="plus_sign">+</string>

    <!-- Rolling popups -->
    <string name="roll_setting_dice_number">dice</string>
    <string name="roll_setting_modifier">mod</string>
    <string name="btn_roll">Roll</string>
    <string name="btn_roll_cancel">Cancel</string>
    <string name="btn_roll_confirm_with_result">%d, got it!</string>

    <!-- New die popup -->
    <string name="btn_dialog_add">Add</string>
    <string name="sides_caption">sides</string>

    <!-- Shortcut configuration popup -->
    <string name="new_shortcut">New shortcut</string>
    <string name="btn_dialog_save">Save</string>

    <!-- Delete die popup -->
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <!-- DiceSetEditScreen -->
    <string name="no_dice_snack_bar_message">Creating shortcut needs a die</string>
    <string name="delete_die_dialog_message">Die chosen to be deleted is a base of at least one
        shortcut. Deleting it will result with them gone as well. Do you wish to proceed?</string>

    <!-- SettingsScreen -->
    <string name="rolling_dice_caption">Rolling dice</string>
    <string name="setting_sound_caption">Sound</string>
    <string name="setting_time_caption">Single throw time: %d ms</string>
    <string name="setting_throw_delay_caption">Delay between throws: %d ms</string>
    <string name="setting_roll_popup_automatic_dismiss">Auto-dismissing popup</string>
    <string name="setting_roll_popup_dismiss_time">%d ms after finishing roll</string>

</resources>