...

@Composable
fun NewSetDialog(
    onDialogDismissed: () -> Unit = { },
    onNewSetAdded: (DiceSetInfo) -> Unit = { }
) {
    var currentSetState by rememberSaveable { mutableStateOf(DiceSetInfo(name = "New set")) }
    var showColorPicker by rememberSaveable { mutableStateOf<ColorType?>(null) }

    AlertDialog(
        properties = DialogProperties(dismissOnBackPress = true, dismissOnClickOutside = true),
        onDismissRequest = onDialogDismissed,
        confirmButton = { CenteredDialogConfirmButton(
...
